# City-Pulse

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  ADDITIONAL_CONSIDERATIONS.txt  API_PARAMETERS.txt  README.md  SCRAPING_POLICY.md  city_pulse.db  city_pulse.db-shm  city_pulse.db-wal  main.py  mySQL-authentication.txt  openapi.yaml  py-project.toml  pyproject.toml  requirements.txt
Frontend_Draft/src/app/: routes.tsx
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/app/: routes.tsx
frontend/src/styles/: theme.css
postman/: City-Pulse.postman_collection.json
src/: city_pulse.db
src/app/: __init__.py  auth.py  city_pulse.db  city_pulse.db-shm  city_pulse.db-wal  config.py  database.py  event_categories.py  main.py  models.py  region_map.py  schemas.py
src/app/core/: __init__.py  auth.py  database.py  dependencies.py  settings.py
src/app/exceptions/: __init__.py  http.py
src/app/ingestion/: __init__.py  adapters.py  dedupe.py  service.py  source_registry.py  types.py  upsert_service.py
src/app/repositories/: __init__.py  event_repository.py  interaction_repository.py  partner_submission_repository.py  region_repository.py  trend_repository.py  user_repository.py
src/app/repository/: __init__.py  event.py  ingest.py  interaction.py  region.py  source.py  trend.py  user.py
src/app/routers/: __init__.py  auth.py  events.py  interactions.py  regions.py  trends.py  users.py
src/test/: test_auth_endpoints.py  test_auth_tokens.py  test_crud_endpoints.py  test_event_repository.py
(+39 files in other folders)
